# diyanet

./: .pre-commit-config.yaml  LICENSE.txt  README.md  diyanet.py  pyproject.toml  setup.cfg
