[metadata]
name = diyanet
version = 0.1.2
url = https://github.com/isidentical/diyanet
author = isidentical
author_email = isidentical@gmail.com
description = Diyanet API 
long_description = file: README.md
long_description_content_type = text/markdown
license-file = LICENSE.txt

[options]
py_modules = diyanet
python_requires = >=3.7

[bdist_wheel]
universal = True
